--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             justify-content: center;
             align-items: center;
             z-index: 9999;
-            overflow: auto;
+            overflow: hidden;
         }
 
 
@@ -636,9 +636,7 @@
             <p><a href="https://www.instagram.com/igoch1/" target="_blank">★Igochii</a></p>
 
             <p>★Con ayuda del chat★</p>
-
-            
-            <p>© Santiago Fisela - 14/6/2024</p>
+            <p>14/6/2024</p>
         </div>
     </div>
 
